# onez

./: .gitignore  .gitmodules  Builder.SPIRV.cpp  BuilderSPIRV.cpp  BuilderSPIRV.h  CMakeLists.txt  README.md  VulkanTest  clean.sh  main.cpp  makefile  onez.h
shaders/: mesh.glsl  mesh.h  shader.frag  shader.vert  test.frag.glsl  test.mesh.glsl
